--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,5 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Generate sitemap.xml from React routes
+        run: npm run generate:sitemap
+
       - name: Build
         run: npm run build
